--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--BEM Block Element Modifier-->
     <div class="navbar">
-        <div class="container">
+        <div class="container pt-20 pb-20 flex justify-content-space-between align-items-center">
             <div class="navbar__search-box">
                 <div class="search">
                     <form action="#" onSubmit="return false" class="search__form">
@@ -39,7 +39,8 @@
                 </div>
             </div>
             <div class="navbar__logo">
-                <a href="/"><img src="./images/logo-header.png" alt="Logo Large"></a>
+                <a href="/"><img class="hidden show-large" src="./images/logo-header.png" alt="Logo Large"></a>
+                <a href="/"><img class="hidden show-small" src="./images/logo-header-small.png" alt="Logo Large"></a>
             </div>
         </div>
     </div>
