--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             </div>
             <div class="navbar__nav">
                 <div class="nav">
+                    <!--Start Burger Menu-->
+                    <input class="nav__burger-checkbox" id="burgermenu" type="checkbox">
+                    <label class="nav__burger-label" for="burgermenu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                    <!--End Burger Menu-->
                     <ul class="nav__lists">
                         <li class="nav__list"><a href="/" class="nav__link">خانه</a></li>
                         <li class="nav__list"><a href="/" class="nav__link">دوره ها</a></li>
