--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <!--End Burger Menu-->
                     <ul class="nav__lists">
                         <li class="nav__list"><a href="/" class="nav__link">خانه</a></li>
-                        <li class="nav__list"><a href="/" class="nav__link">دوره ها</a></li>
-                        <li class="nav__list"><a href="/" class="nav__link">مدرسین</a></li>
+                        <li class="nav__list"><a href="/" class="nav__link">دوره ها<span class="nav__arrow"></span></a></li>
+                        <li class="nav__list"><a href="/" class="nav__link">مدرسین<span class="nav__arrow"></span></a></li>
                         <li class="nav__list"><a href="/" class="nav__link">درباره ما</a></li>
                     </ul>
                 </div>
