--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
                     <!--End Burger Menu-->
                     <ul class="nav__lists">
                         <li class="nav__list"><a href="/" class="nav__link">خانه</a></li>
-                        <li class="nav__list"><a href="/" class="nav__link">دوره ها<span class="nav__arrow"></span></a></li>
-                        <li class="nav__list"><a href="/" class="nav__link">مدرسین<span class="nav__arrow"></span></a></li>
+                        <li class="nav__list"><a href="/" class="nav__link">دوره ها<span class="nav__arrow"></span></a>
+                            <ul class="nav__sublists1">
+                                <li><a href="#">تور و گردشگری</a></li>
+                                <li><a href="#">دوره های آنلاین</a></li>
+                                <li class="nav__sublist1"><a href="#">سایر</a>
+                                    <ul class="nav__sublists2">
+                                        <li><a href="#">فروشگاه اینترنتی</a></li>
+                                        <li><a href="#">بلیط هواپیما و هتل</a></li>
+                                        <li><a href="#">اجاره خودرو</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav__list"><a href="/" class="nav__link">مدرسین<span class="nav__arrow"></span></a>
+                        </li>
                         <li class="nav__list"><a href="/" class="nav__link">درباره ما</a></li>
                     </ul>
                 </div>
