make mega menu and responsive

--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="fa" dir="rtl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
+    <link rel="stylesheet" href="./css/navbar.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/search.css" />
     <title>قالب پیشرفته</title>
-    <link rel="stylesheet" href="./css/all.css">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/search.css">
 </head>
 
 <body>
-
     <!--BEM Block Element Modifier-->
     <div class="navbar">
         <div class="container pt-20 pb-20 flex justify-content-space-between align-items-center">
             <div class="navbar__search-box">
                 <div class="search">
                     <form action="#" onsubmit="return false;" class="search__form">
-                        <input type="text" class="search__input" placeholder="جستجو کنید">
-                        <button class="search__btn" type="submit">
+                        <input type="text" placeholder="جستجو کنید" class="search__input" />
+                        <button class="search__button">
                             <span class="search__circle"></span>
                             <span class="search__stand"></span>
                         </button>
@@ -32,53 +31,135 @@
             <div class="navbar__nav">
                 <div class="nav">
                     <!--Start Burger Menu-->
-                    <input class="nav__burger-checkbox" id="burgermenu" type="checkbox">
+                    <input type="checkbox" class="nav__burger-checkbox" id="burgermenu" />
                     <label class="nav__burger-label" for="burgermenu">
                         <span></span>
                         <span></span>
                         <span></span>
                     </label>
                     <!--End Burger Menu-->
-                    <ul class="nav__lists">
-                        <li class="nav__list"><a href="/" class="nav__link">خانه</a></li>
-                        <li class="nav__list"><a href="/" class="nav__link">دوره ها<span class="nav__arrow"></span></a>
-                            <ul class="nav__sublists1">
-                                <li><a href="#">
-                                        <i class="fas fa-globe-asia"></i>
-                                        تور و گردشگری</a></li>
-                                <li>
-                                    <a href="#"><i class="fas fa-user-graduate"></i>آموزش آنلاین</a>
-                                </li>
-                                <li class="nav__sublist1">
-                                    <a href="#"><i class="fas fa-list"></i>سایر<i class="fas fa-angle-left"></i></a>
+                    <div class="nav__mobile-wrap">
+                        <ul class="nav__lists">
+                            <li class="nav__list"><a href="/" class="nav__link">خانه</a></li>
+                            <li class="nav__list">
+                                <a href="/" class="nav__link">دوره ها<span class="nav__arrow"></span></a>
 
-                                    <ul class="nav__sublists2">
-                                        <li>
-                                            <a href="#"><i class="fas fa-credit-card"></i>فروشگاه اینترنتی</a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="fas fa-hotel"></i>بلیط هواپیما و هتل</a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="fas fa-car"></i>اجاره خودرو</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav__list"><a href="/" class="nav__link">مدرسین<span class="nav__arrow"></span></a>
-                        </li>
-                        <li class="nav__list"><a href="/" class="nav__link">درباره ما</a></li>
-                    </ul>
+                                <ul class="nav__sublists1">
+                                    <li>
+                                        <a href="#"><i class="fas fa-globe-asia"></i>تور و گردشگری</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fas fa-user-graduate"></i>آموزش آنلاین</a>
+                                    </li>
+                                    <li class="nav__sublist1">
+                                        <a href="#"><i class="fas fa-list"></i>سایر<i class="fas fa-angle-left"></i></a>
+
+                                        <ul class="nav__sublists2">
+                                            <li>
+                                                <a href="#"><i class="fas fa-credit-card"></i>فروشگاه اینترنتی</a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="fas fa-hotel"></i>بلیط هواپیما و هتل</a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="fas fa-car"></i>اجاره خودرو</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav__list nav__mega">
+                                <a href="/" class="nav__link">مدرسین<span class="nav__arrow"></span></a>
+                                <div class="nav__mega-content">
+                                    <div class="nav__mega-column">
+                                        <img src="./images/mega-menu-bg.png" alt="mega menu" />
+                                        <a href="#" class="nav__button">سه روز تا پایان تخفیف</a>
+                                    </div>
+                                    <div class="nav__mega-column">
+                                        <h4>تمامی دوره ها</h4>
+                                        <ul class="nav__mega-lists">
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-globe-asia"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-globe-asia"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-globe-asia"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-globe-asia"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-globe-asia"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="nav__mega-column">
+                                        <h4>ویديوهای پر بازدید</h4>
+                                        <ul class="nav__mega-lists">
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-user-graduate"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-user-graduate"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-user-graduate"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-user-graduate"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fas fa-user-graduate"></i>
+                                                    <span>دوره پیشرفته css</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="nav__list"><a href="/" class="nav__link">درباره ما</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="navbar__logo">
-                <a href="/"><img class="hidden show-large" src="./images/logo-header.png" alt="Logo Large"></a>
-                <a href="/"><img class="hidden show-small" src="./images/logo-header-small.png" alt="Logo Large"></a>
+                <a href="/">
+                    <img class="hidden show-large" src="./images/logo-header.png" alt="Logo large" />
+                    <img class="hidden show-small" src="./images/logo-header-small.png" alt="Logo large" />
+                </a>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
